# platform_packages_apps_Gallery2

./: .gitmodules  Android.bp  AndroidManifest.xml  CMakeLists.txt  settings.gradle.kts
app/: build.gradle.kts
mp4parser/: build.gradle.kts
res/values/: strings.xml  styles.xml
res/values-af/: strings.xml
res/values-am/: strings.xml
res/values-ar/: strings.xml
res/values-az/: strings.xml
res/values-bg/: strings.xml
res/values-ca/: strings.xml
res/values-cs/: strings.xml
res/values-da/: strings.xml
res/values-de/: strings.xml
res/values-el/: strings.xml
res/values-en-rGB/: strings.xml
res/values-es/: strings.xml
res/values-es-rUS/: strings.xml
res/values-et/: strings.xml
res/values-fa/: strings.xml
res/values-fi/: strings.xml
res/values-fr/: strings.xml
res/values-fr-rCA/: strings.xml
res/values-hi/: strings.xml
res/values-hr/: strings.xml
res/values-hu/: strings.xml
res/values-hy/: strings.xml
res/values-in/: strings.xml
res/values-it/: strings.xml
res/values-iw/: strings.xml
res/values-ja/: strings.xml
res/values-ka/: strings.xml
res/values-km/: strings.xml
res/values-ko/: strings.xml
res/values-lo/: strings.xml
res/values-lt/: strings.xml
res/values-lv/: strings.xml
res/values-mn/: strings.xml
res/values-ms/: strings.xml
res/values-nb/: strings.xml
res/values-ne/: strings.xml
res/values-nl/: strings.xml
res/values-pl/: strings.xml
res/values-pt/: strings.xml
res/values-pt-rPT/: strings.xml
res/values-ro/: strings.xml
res/values-ru/: strings.xml
res/values-si/: strings.xml
res/values-sk/: strings.xml
res/values-sl/: strings.xml
res/values-sr/: strings.xml
res/values-sv/: strings.xml
res/values-sw/: strings.xml
res/values-th/: strings.xml
res/values-tl/: strings.xml
res/values-tr/: strings.xml
res/values-uk/: strings.xml
res/values-vi/: strings.xml
res/values-zh-rCN/: strings.xml
res/values-zh-rHK/: strings.xml
res/values-zh-rTW/: strings.xml
res/values-zu/: strings.xml
src/com/android/gallery3d/app/: AlbumPage.java  AlbumSetPage.java  PhotoPage.java
src/com/android/gallery3d/data/: ClusterAlbum.java  FilterTypeSet.java  LocalAlbum.java
src/com/android/gallery3d/filtershow/: FilterShowActivity.java
src/com/android/gallery3d/filtershow/category/: CategoryPanel.java
src/com/android/gallery3d/filtershow/crop/: CropActivity.java
src/com/android/gallery3d/filtershow/editors/: EditorColorBorder.java  EditorDraw.java
src/com/android/gallery3d/filtershow/imageshow/: ImageCurves.java
src/com/android/gallery3d/filtershow/presets/: PresetManagementDialog.java  UserPresetsAdapter.java
src/com/android/gallery3d/filtershow/ui/: ExportDialog.java  FramedTextButton.java
src/com/android/gallery3d/ui/: MenuExecutor.java
src/com/android/photos/: GalleryActivity.java  MultiChoiceManager.java
